k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: docker.io/devasheesh22/calculater-weatherapp:v1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5173
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1000
          runAsGroup: 3000
          fsGroup: 2000
          supplementalGroups: [4000]
