k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    app: test
  ports:
  - protocol: TCP
    port: 5173
    targetPort: 5173
